# unlearning

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
api/: __init__.py  auth.py  main.py  metrics.py  persistence.py  wal.py
compliance/: __init__.py  crypto_shred.py  kms_backends.py  recall_bounds.py  residual.py
docs/: BACKUPS_AND_REPLICAS.md  BENCHMARKS.md  ENGINES.md  GITHUB_UPLOAD.md  GOLDEN_PATH.md  HNSWLIB_AND_BENCHMARKS.md  HOOKS.md  INSTALL.md  INTEGRATION.md  PILOT.md  RECALL_BOUNDS.md  TESTING.md  THREAT_MODEL.md
docs/benchmarks/: standard_hnswlib.md
examples/attack_demo/: run.py
examples/chroma_forget/: README.md  run.py
integrations/: __init__.py  backends.py  chroma_hook.py  compact_policy.py  delete_strategy.py  erase_service.py  faiss_adapter.py  hnswlib_adapter.py  hooks.py  hooks_config.py  id_registry.py  native_backend.py  outbox.py  qdrant_adapter.py  queue_transports.py  receipt_log.py  replica_fanout.py  tenancy.py  vendor_attach.py  weaviate_adapter.py  workflow.py
scripts/: install_hnswlib_msvc.bat  setup_hnswlib_env.ps1
src/: healer.cpp  hnsw_helper.hpp  neighborhood_locks.hpp
tests/: __init__.py  benchmark.py  conftest.py  test_api.py  test_auth.py  test_batch_compact.py  test_chroma_hook.py  test_compact_policy.py  test_crypto_shred.py  test_delete_strategy.py  test_erase_service.py  test_faiss_adapter.py  test_footguns.py  test_hnswlib_adapter.py  test_hooks.py  test_id_registry.py  test_kms_crypto.py  test_metrics.py  test_outbox.py  test_qdrant_adapter.py  test_queue_transports.py  test_recall_bounds.py  test_receipt_log.py  test_replica_fanout.py  test_residual_proof.py  test_tenancy.py  test_vendor_attach.py  test_wal.py  test_weaviate_adapter.py  test_workflow.py
