# PEP 517 build frontend + cibuildwheel configuration.
# Package metadata and the CMake extension live in setup.py.

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cmake>=4.4.0",
    "ninja",
    "pybind11>=2.12.0",
    "numpy>=1.26.0",
]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# cibuildwheel — multi-platform native wheels for the pybind11 module
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# CPython 3.10–3.12 (matches project python_requires>=3.10)
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-win32 *-manylinux_i686 *-musllinux_*"

# Ensure CMake + pybind11 are available inside each build container/venv.
before-build = "pip install cmake ninja pybind11 numpy setuptools wheel"

# Install test deps into the wheel-test environment, then run unit tests.
test-requires = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "cryptography>=42.0.0",
    "uvicorn>=0.27.0",
]
# {project} is the repo root; ignore the long-running benchmark suite.
# Optional hnswlib/chroma tests auto-skip when those packages are absent.
test-command = "pytest {project}/tests -v --ignore={project}/tests/benchmark.py"

[tool.cibuildwheel.linux]
# manylinux x86_64 + aarch64 (ARM64) via cibuildwheel
archs = ["auto64"]

[tool.cibuildwheel.macos]
# Apple Silicon
archs = ["arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "12.0" }
