# PEP 517 build frontend + cibuildwheel configuration.
# Package metadata and the CMake extension live in setup.py.

[build-system]
# Default build uses pybind11.setup_helpers (no cmake required for wheels).
# CMake remains optional via HNSW_HEALER_USE_CMAKE=1 for local advanced builds.
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11>=2.12.0",
    "numpy>=1.26.0",
]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# cibuildwheel — multi-platform native wheels for the pybind11 module
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# CPython 3.10–3.12 (matches project python_requires>=3.10)
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-win32 *-manylinux_i686 *-musllinux_*"
before-build = "pip install -U pip setuptools wheel pybind11 numpy"
test-requires = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "cryptography>=42.0.0",
    "uvicorn>=0.27.0",
]
test-command = "pytest {project}/tests -v --ignore={project}/tests/benchmark.py"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "12.0" }
